test/bad/classes/cmp02.px

class A def
    Int x

A() < A()
